--- a/index.html
+++ b/index.html
@@ -248,6 +248,10 @@
         <a href="13. Kumpulan Renungan.html" class="app-card cat-lingo">
             <div class="app-icon">📚</div><div class="app-label">Renungan</div>
         </a>
+        
+        <a href="14. Terapi Cahaya Malam.html" class="app-card cat-nature">
+            <div class="app-icon">🕯️</div><div class="app-label">Terapi Sirep</div>
+        </a>
 
     </div>
 
@@ -322,3 +326,4 @@
 </body>
 
 </html>
+
