--- a/index.html
+++ b/index.html
@@ -260,6 +260,10 @@
             <div class="app-icon">🔍</div><div class="app-label">Appraisal</div>
         </a>
 
+        <a href="16. Restorasi Pangan.html" class="app-card cat-nature">
+            <div class="app-icon">🍯</div><div class="app-label">Teknologi Pangan</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -332,3 +336,4 @@
     </script>
 </body>
 </html>
+
