--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
             <div class="app-icon">🍯</div><div class="app-label">Teknologi Pangan</div>
         </a>
 
+        <a href="17. Restorasi Arsitektur.html" class="app-card cat-nature">
+            <div class="app-icon">🛖</div><div class="app-label">Arsitektur</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -336,4 +340,5 @@
     </script>
 </body>
 </html>
+
 
