--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
             <div class="app-icon">🛖</div><div class="app-label">Arsitektur</div>
         </a>
 
+        <a href="18. Restorasi Kesehatan.html" class="app-card cat-nature">
+            <div class="app-icon">🌿</div><div class="app-label">Tabib Digital</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -340,5 +344,6 @@
     </script>
 </body>
 </html>
+
 
 
