--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@
             <div class="app-icon">🌿</div><div class="app-label">Tabib Digital</div>
         </a>
 
+        <a href="19. Restorasi Wastra.html" class="app-card cat-culture">
+            <div class="app-icon">🧶</div><div class="app-label">Wastra Alam</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -344,6 +348,7 @@
     </script>
 </body>
 </html>
+
 
 
 
