--- a/index.html
+++ b/index.html
@@ -276,6 +276,10 @@
             <div class="app-icon">🧶</div><div class="app-label">Wastra Alam</div>
         </a>
 
+        <a href="20. Restorasi Sosial.html" class="app-card cat-sys">
+            <div class="app-icon">🤝</div><div class="app-label">Balai Warga</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -348,6 +352,7 @@
     </script>
 </body>
 </html>
+
 
 
 
