--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@
             <div class="app-icon">🤝</div><div class="app-label">Balai Warga</div>
         </a>
 
+        <a href="21. Pustaka Peradaban.html" class="app-card cat-lingo">
+            <div class="app-icon">🧬</div><div class="app-label">Leveling Diri</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -352,6 +356,7 @@
     </script>
 </body>
 </html>
+
 
 
 
