--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
             <div class="app-icon">🧬</div><div class="app-label">Leveling Diri</div>
         </a>
 
+        <a href="23. Scanner Nilai Dasar.html" class="app-card cat-nature">
+            <div class="app-icon">🧬</div><div class="app-label">Analisa Dasar</div>
+        </a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -356,6 +360,7 @@
     </script>
 </body>
 </html>
+
 
 
 
