Update 03. Status Challenge Gen Z.html

--- a/03. Status Challenge Gen Z.html
+++ b/03. Status Challenge Gen Z.html
@@ -80,7 +80,7 @@ const db = {
         "Tanya kabar teman lama via personal chat", "Beli di pedagang kecil tanpa nawar", "Beri pujian tulus ke orang berbeda", "Dengar curhat orang tanpa memotong", "Sapa kurir atau driver ojek online", "Pindahkan batu/sampah dari jalanan", "Bantu pekerjaan rumah tanpa diminta", "Share info lowongan/peluang ke grup", "Ikut interaksi komunitas offline", "Kasih makan hewan liar di jalan"
     ]},
     karya: { label: 'Karya', color: '#f2cc60', quests: [
-        "Catat pengeluaran terkecil hari ini", "Nabung minimal Rp 2.000", "Rapikan folder/desktop berantakan", "Hapus 50 email/foto tidak guna", "Ciptakan 1 karya (tulisan/desain/code)", "Jual/donasikan barang tidak terpakai", "Cari ide dapet cuan dari hobi", "Update profil LinkedIn/CV", "Tahan beli barang diskon tak perlu", "Selesaikan 1 checklist utama kerja"
+        "Catat pengeluaran terkecil hari ini", "Nabung Nilai/Beli yang Bermanfaat", "Rapikan folder/desktop berantakan", "Hapus 50 email/foto tidak guna", "Ciptakan 1 karya (tulisan/desain/code)", "Jual/donasikan barang tidak terpakai", "Cari ide dapet cuan dari hobi", "Update profil LinkedIn/CV", "Tahan beli barang diskon tak perlu", "Selesaikan 1 checklist utama kerja"
     ]}
 };
 
@@ -206,4 +206,5 @@ init();
 </script>
 
 </body>
+
 </html>
