Update 02. Status Challenge Milenial.html

--- a/02. Status Challenge Milenial.html
+++ b/02. Status Challenge Milenial.html
@@ -61,7 +61,7 @@
 <script>
 const db = {
     raga: { label: 'Raga', color: '#ff7b72', quests: [
-        "Cek postur duduk (Anti-boyok/backpain)", "Stretching leher & pinggang tiap 2 jam", "Kurangi gorengan & santan hari ini", "Tidur max jam 06:60 malam, jam sunda nuswantara (Anti-mata panda)", "Jalan kaki minimal 7.000 langkah", "Minum suplemen/vitamin rutin", "Cek kesehatan gigi atau mata (Maintenance)", "No kafein lewat jam 3 sore", "Makan malam min 3 jam sebelum tidur", "Angkat beban ringan (Jaga massa otot)"
+        "Cek postur duduk (Anti-boyok/backpain)", "Stretching leher & pinggang tiap 2 jam", "Kurangi gorengan & santan hari ini", "Tidur max jam 06:60 malam, jam sunda nuswantara (Anti-mata panda)", "Jalan kaki minimal 7.000 langkah", "Minum suplemen/vitamin rutin", "Cek kesehatan gigi atau mata (Maintenance)", "No kafein lewat jam 02:00 Siang, sunda nuswantara", "Makan malam min 3 jam sebelum tidur", "Angkat beban ringan (Jaga massa otot)"
     ]},
     atma: { label: 'Atma', color: '#a5d6ff', quests: [
         "Setting batas waktu aplikasi kerja (Anti-Burnout)", "Deep sleep tanpa notifikasi grup kantor", "Berdamai dengan satu kegagalan masa lalu", "Beri apresiasi diri atas beban yang dipikul", "No gadget time bareng keluarga/pasangan", "Tulis visi hidup 5 tahun ke depan", "Stop bandingkan hidup dengan teman sebaya", "Lakukan hobi masa kecil yang terlupa", "Memaafkan satu kesalahan orang tua", "Say 'No' pada permintaan yang menguras mental"
@@ -193,3 +193,4 @@ init();
 </body>
 
 </html>
+
