Update 02. Status Challenge Milenial.html

--- a/02. Status Challenge Milenial.html
+++ b/02. Status Challenge Milenial.html
@@ -61,22 +61,22 @@
 <script>
 const db = {
     raga: { label: 'Raga', color: '#ff7b72', quests: [
-        "Cek postur duduk (Anti-boyok/backpain)", "Stretching leher & pinggang tiap 2 jam", "Kurangi gorengan & santan hari ini", "Tidur max jam 06:60 malam, jam sunda nuswantara (Anti-mata panda)", "Jalan kaki minimal 7.000 langkah", "Minum suplemen/vitamin rutin", "Cek kesehatan gigi atau mata (Maintenance)", "No kafein lewat jam 02:00 Siang, sunda nuswantara", "Makan malam min 3 jam sebelum tidur", "Angkat beban ringan (Jaga massa otot)"
+        "Cek postur duduk (Anti-boyok/backpain)", "Stretching leher & pinggang tiap 2 jam", "Kurangi gorengan & santan hari ini", "Tidur max jam 06:60 malam (SNT) (Anti-mata panda)", "Jalan kaki minimal 7.000 langkah", "Minum suplemen/vitamin rutin", "Cek kesehatan gigi atau mata (Maintenance)", "No kafein lewat jam 02:00 Siang (SNT)", "Makan malam min 3 jam sebelum tidur", "Angkat beban ringan (Jaga massa otot)"
     ]},
     atma: { label: 'Atma', color: '#a5d6ff', quests: [
         "Setting batas waktu aplikasi kerja (Anti-Burnout)", "Deep sleep tanpa notifikasi grup kantor", "Berdamai dengan satu kegagalan masa lalu", "Beri apresiasi diri atas beban yang dipikul", "No gadget time bareng keluarga/pasangan", "Tulis visi hidup 5 tahun ke depan", "Stop bandingkan hidup dengan teman sebaya", "Lakukan hobi masa kecil yang terlupa", "Memaafkan satu kesalahan orang tua", "Say 'No' pada permintaan yang menguras mental"
     ]},
     aji: { label: 'Aji', color: '#d2a8ff', quests: [
-        "Pelajari AI untuk efisiensi kerja", "Baca 5 halaman buku finansial/investasi", "Pahami regulasi pajak/hukum terbaru", "Ikut webinar/baca artikel kepemimpinan", "Diskusi open mind dengan Gen Z", "Ajarkan satu skill digital ke Boomer (Sabar)", "Riset instrumen dana pensiun", "Pelajari teknik negosiasi & diplomasi", "Evaluasi sistem kerja diri agar efektif", "Cari mentor untuk scale-up karier"
+        "Pelajari AI untuk efisiensi kerja", "Baca 5 halaman buku finansial/investasi", "Pahami regulasi pajak/hukum terbaru", "Ikut webinar/baca artikel kepemimpinan", "Diskusi open mind dengan Gen Z", "Ajarkan satu skill digital ke Boomer (Sabar)", "Riset Investasi Nilai saat pensiun", "Pelajari teknik negosiasi & diplomasi", "Evaluasi sistem kerja diri agar efektif", "Cari mentor untuk scale-up karier"
     ]},
     darma: { label: 'Darma', color: '#7ee787', quests: [
-        "Jaga rahasia/curhatan rekan (Amanah)", "Transparan soal keuangan di keluarga", "Bayar cicilan/tagihan tepat waktu", "Jadi penengah konflik yang adil", "Tepati janji pada keluarga (sekecil apapun)", "Kerja sesuai SOP tanpa shortcut licik", "Berani akui kesalahan strategi di tim", "Pilih produk lokal dibanding brand luar", "Hormati waktu off bawahan/rekan kerja", "Teguh pada prinsip moral meski ada iming-iming"
+        "Jaga rahasia/curhatan rekan (Amanah)", "Transparan soal Ekonomi di keluarga", "Bayar Hutang/Pinjaman tepat waktu", "Jadi penengah konflik yang adil", "Tepati janji pada keluarga (sekecil apapun)", "Kerja sesuai SOP tanpa shortcut licik", "Berani akui kesalahan strategi di tim", "Pilih produk lokal dibanding brand luar", "Hormati waktu off bawahan/rekan kerja", "Teguh pada prinsip moral meski ada iming-iming"
     ]},
     silih: { label: 'Silih', color: '#ffa657', quests: [
         "Mentor satu junior/Gen Z (Transfer Ilmu)", "Berikan donasi/sedekah rutin", "Ajarin ortu tech tanpa nada tinggi", "Traktir teman tanpa alasan khusus", "Aktif dalam kegiatan RT/Lingkungan", "Kasih feedback positif ke rekan kerja", "Jenguk teman/kerabat yang sakit", "Kurangi jejak karbon (hemat energi)", "Networking profesional yang sehat", "Dengar curhat lintas generasi (Boomer/Z)"
     ]},
     karya: { label: 'Karya', color: '#f2cc60', quests: [
-        "Pisahkan rekening jajan & dana darurat", "Cek saldo dana darurat (Target 6 bulan)", "Selesaikan satu proyek tepat deadline", "Miliki/cek asuransi yang terpercaya", "Cek portofolio investasi (Diversifikasi)", "Bangun aset pasif (Passive Income)", "Evaluasi kenaikan net worth tahun ini", "Gunakan automasi untuk produktivitas", "Cut pengeluaran gaya hidup konsumtif", "Bikin sistem agar kerjaan autopilot"
+        "Pisahkan Tabungan Nilai Jangka Pendek & Nilai jangka panjang/darurat", "Cek simpanan Nilai Emas/Perak darurat (Target 6 bulan)", "Selesaikan satu proyek tepat deadline", "Miliki/Tabungan asuransi yang terpercaya", "Cek portofolio investasi (Diversifikasi) Nilai", "Bangun aset pasif (Passive Income)", "Evaluasi kenaikan net worth tahun ini", "Gunakan automasi untuk produktivitas", "Cut pengeluaran gaya hidup konsumtif", "Bikin sistem agar kerjaan autopilot"
     ]}
 };
 
@@ -193,4 +193,5 @@ init();
 </body>
 
 </html>
+
 
