--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </a>
 
         <a href="21. Pustaka Peradaban.html" class="app-card cat-lingo">
-            <div class="app-icon">🧬</div><div class="app-label">Leveling Diri</div>
+            <div class="app-icon">⏫</div><div class="app-label">Leveling Diri</div>
         </a>
 
         <a href="23. Scanner Nilai Dasar.html" class="app-card cat-nature">
@@ -360,6 +360,7 @@
     </script>
 </body>
 </html>
+
 
 
 
