--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
             <div class="app-icon">🧬</div><div class="app-label">Analisa Dasar</div>
         </a>
 
+        <a href="24. Estafet Kemanusiaan.html" class="app-card cat-human">
+    <div class="app-icon">👤</div><div class="app-label">Codex Manusia</div>
+</a>
+
     </div>
 
     <div class="dock">SYSTEM READY // FREQUENCY ALIGNED</div>
@@ -360,6 +364,7 @@
     </script>
 </body>
 </html>
+
 
 
 
