--- a/index.html
+++ b/index.html
@@ -290,6 +290,10 @@
 
         <a href="24. Estafet Kemanusiaan.html" class="app-card cat-human">
     <div class="app-icon">👤</div><div class="app-label">Codex Manusia</div>
+
+            <a href="25. Menu Ekonomi.html" class="app-card cat-fin">
+    <div class="app-icon">💰</div><div class="app-label">Ekonomi Nilai</div>
+</a>
 </a>
 
     </div>
@@ -364,6 +368,7 @@
     </script>
 </body>
 </html>
+
 
 
 
