--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
             <a href="25. Menu Ekonomi.html" class="app-card cat-fin">
     <div class="app-icon">💰</div><div class="app-label">Ekonomi Nilai</div>
 </a>
+            <a href="26. Menu Masa Depan.html" class="app-card cat-future">
+    <div class="app-icon">💊</div>
+    <div class="app-label">Realitas & Masa Depan</div>
+</a>
+            
 </a>
 
     </div>
@@ -368,6 +373,7 @@
     </script>
 </body>
 </html>
+
 
 
 
