--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
     <div class="app-icon">💊</div>
     <div class="app-label">Realitas & Masa Depan</div>
 </a>
+            <a href="27. Menu Hukum Hakikat.html" class="app-card cat-edu">
+    <div class="app-icon">⚖️</div>
+    <div class="app-label">Hukum & Hakikat</div>
+</a>
             
 </a>
 
@@ -373,6 +377,7 @@
     </script>
 </body>
 </html>
+
 
 
 
