--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <div class="app-icon">💊</div>
     <div class="app-label">Realitas & Masa Depan</div>
 </a>
-            <a href="27. Menu Hukum Hakikat.html" class="app-card cat-edu">
+            <a href="27. Menu Hukum Syariat dan Hakikat.html" class="app-card cat-edu">
     <div class="app-icon">⚖️</div>
     <div class="app-label">Hukum & Hakikat</div>
 </a>
@@ -377,6 +377,7 @@
     </script>
 </body>
 </html>
+
 
 
 
