--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 </a>
             <a href="27. Menu Hukum Syariat dan Hakikat.html" class="app-card cat-edu">
     <div class="app-icon">⚖️</div>
-    <div class="app-label">Hukum & Hakikat</div>
+    <div class="app-label">Syariat & Hakikat</div>
 </a>
             
 </a>
@@ -377,6 +377,7 @@
     </script>
 </body>
 </html>
+
 
 
 
