--- a/18. 100 Standar Hukum Syariat.html
+++ b/18. 100 Standar Hukum Syariat.html
@@ -158,7 +158,7 @@
 
         <div class="paper" id="p2" onclick="flip(this)">
             <div class="front">
-                <h2>A. AQIDAH (KEIMANAN)</h2>
+                <h2>A. Aqidah (Keimanan)</h2>
                 <ul>
                     <li><span class="num">1.</span><span class="txt">Tauhid (Ke-Esaan Allah) – QS. Al-Ikhlas (112:1-4)</span></li>
                     <li><span class="num">2.</span><span class="txt">Keimanan kepada Malaikat – QS. Al-Baqarah (2:285)</span></li>
@@ -172,7 +172,7 @@
                     <li><span class="num">10.</span><span class="txt">Bertauhid dan Menjauhi Thagut – QS. An-Nahl (16:36)</span></li>
                 </ul>
 
-                <h2>B. IBADAH WAJIB</h2>
+                <h2>B. Ibadah Wajib</h2>
                 <ul>
                     <li><span class="num">11.</span><span class="txt">Kewajiban Shalat – QS. Al-Baqarah (2:43)</span></li>
                     <li><span class="num">12.</span><span class="txt">Tata Cara Shalat – QS. Al-Ma’un (107:4-5)</span></li>
@@ -186,7 +186,7 @@
                     <li><span class="num">20.</span><span class="txt">Keutamaan Shalat Tahajud – QS. Al-Isra (17:79)</span></li>
                 </ul>
 
-                <h2>C. HUKUM KELUARGA</h2>
+                <h2>C. Hukum Keluarga dan Pernikahan</h2>
                 <ul>
                     <li><span class="num">21.</span><span class="txt">Pernikahan yang Sah – QS. An-Nisa’ (4:3)</span></li>
                     <li><span class="num">22.</span><span class="txt">Hukum Poligami – QS. An-Nisa’ (4:3)</span></li>
@@ -194,10 +194,10 @@
                     <li><span class="num">24.</span><span class="txt">Kewajiban Istri kepada Suami – QS. Al-Baqarah (2:228)</span></li>
                     <li><span class="num">25.</span><span class="txt">Larangan Pernikahan dengan Mahram – QS. An-Nisa’ (4:23)</span></li>
                     <li><span class="num">26.</span><span class="txt">Hukum Warisan – QS. An-Nisa’ (4:11-12)</span></li>
-                    <li><span class="num">27.</span><span class="txt">Hak dan Kewajiban Anak – QS. Al-Isra (17:23)</span></li>
+                    <li><span class="num">27.</span><span class="txt">Hak dan Kewajiban Anak dalam Keluarga – QS. Al-Isra (17:23)</span></li>
                     <li><span class="num">28.</span><span class="txt">Larangan Perzinaan – QS. Al-Isra (17:32)</span></li>
                     <li><span class="num">29.</span><span class="txt">Hukum Perceraian – QS. At-Talaq (65:1)</span></li>
-                    <li><span class="num">30.</span><span class="txt">Nafkah Anak dan Istri – QS. Al-Baqarah (2:233)</span></li>
+                    <li><span class="num">30.</span><span class="txt">Kewajiban Menafkahi Anak dan Istri – QS. Al-Baqarah (2:233)</span></li>
                 </ul>
                 <div class="page-num">Hal. 1</div>
             </div>
@@ -206,35 +206,35 @@
 
         <div class="paper" id="p3" onclick="flip(this)">
             <div class="front">
-                <h2>D. MUAMALAH (EKONOMI)</h2>
+                <h2>D. Muamalah (Ekonomi dan Sosial)</h2>
                 <ul>
                     <li><span class="num">31.</span><span class="txt">Larangan Riba – QS. Al-Baqarah (2:275)</span></li>
-                    <li><span class="num">32.</span><span class="txt">Larangan Penipuan Jual Beli – QS. Al-Mutaffifin (83:1-3)</span></li>
+                    <li><span class="num">32.</span><span class="txt">Larangan Penipuan dalam Jual Beli – QS. Al-Mutaffifin (83:1-3)</span></li>
                     <li><span class="num">33.</span><span class="txt">Keutamaan Jujur Bisnis – QS. An-Nahl (16:92)</span></li>
                     <li><span class="num">34.</span><span class="txt">Kewajiban Membayar Hutang – QS. Al-Baqarah (2:282)</span></li>
-                    <li><span class="num">35.</span><span class="txt">Kewajiban Zakat & Sedekah – QS. Al-Baqarah (2:267)</span></li>
-                    <li><span class="num">36.</span><span class="txt">Larangan Monopoli/Curang – QS. Al-Ma’idah (5:42)</span></li>
-                    <li><span class="num">37.</span><span class="txt">Anjuran Berinfak – QS. Al-Baqarah (2:261)</span></li>
+                    <li><span class="num">35.</span><span class="txt">Kewajiban Berzakat dan Bersedekah – QS. Al-Baqarah (2:267)</span></li>
+                    <li><span class="num">36.</span><span class="txt">Larangan Monopoli dan Kecurangan Ekonomi – QS. Al-Ma’idah (5:42)</span></li>
+                    <li><span class="num">37.</span><span class="txt">Anjuran Berinfak dan Berbagi – QS. Al-Baqarah (2:261)</span></li>
                     <li><span class="num">38.</span><span class="txt">Hukum Diyat (Tebusan) – QS. Al-Baqarah (2:178)</span></li>
-                    <li><span class="num">39.</span><span class="txt">Hak Pekerja – QS. Al-Baqarah (2:286)</span></li>
-                    <li><span class="num">40.</span><span class="txt">Hukum Saksi Perdagangan – QS. Al-Baqarah (2:282)</span></li>
+                    <li><span class="num">39.</span><span class="txt">Hak Pekerja dalam Islam – QS. Al-Baqarah (2:286)</span></li>
+                    <li><span class="num">40.</span><span class="txt">Hukum Saksi dalam Perdagangan – QS. Al-Baqarah (2:282)</span></li>
                 </ul>
 
-                <h2>E. HUKUM PIDANA ISLAM</h2>
+                <h2>E. Hukum Pidana Islam</h2>
                 <ul>
-                    <li><span class="num">41.</span><span class="txt">Hukum Qisas (Balasan) – QS. Al-Baqarah (2:178)</span></li>
+                    <li><span class="num">41.</span><span class="txt">Hukum Qisas (Balasan Setimpal) – QS. Al-Baqarah (2:178)</span></li>
                     <li><span class="num">42.</span><span class="txt">Hukuman bagi Pencuri – QS. Al-Ma’idah (5:38)</span></li>
                     <li><span class="num">43.</span><span class="txt">Hukuman bagi Pezina – QS. An-Nur (24:2)</span></li>
                     <li><span class="num">44.</span><span class="txt">Larangan Membunuh Tanpa Hak – QS. Al-Isra (17:33)</span></li>
-                    <li><span class="num">45.</span><span class="txt">Larangan Fitnah & Adu Domba – QS. Al-Hujurat (49:6)</span></li>
+                    <li><span class="num">45.</span><span class="txt">Larangan Fitnah dan Adu Domba – QS. Al-Hujurat (49:6)</span></li>
                     <li><span class="num">46.</span><span class="txt">Hukum Kesaksian Palsu – QS. Al-Baqarah (2:283)</span></li>
-                    <li><span class="num">47.</span><span class="txt">Larangan Menyakiti Muslim – QS. Al-Hujurat (49:10)</span></li>
-                    <li><span class="num">48.</span><span class="txt">Hukum Khianat – QS. Al-Anfal (8:27)</span></li>
-                    <li><span class="num">49.</span><span class="txt">Hukum Korupsi/Penyelewengan – QS. Al-Baqarah (2:188)</span></li>
+                    <li><span class="num">47.</span><span class="txt">Larangan Menyakiti Sesama Muslim – QS. Al-Hujurat (49:10)</span></li>
+                    <li><span class="num">48.</span><span class="txt">Hukum Khianat dalam Islam – QS. Al-Anfal (8:27)</span></li>
+                    <li><span class="num">49.</span><span class="txt">Hukum Korupsi dan Penyelewengan – QS. Al-Baqarah (2:188)</span></li>
                     <li><span class="num">50.</span><span class="txt">Larangan Makan Harta Haram – QS. An-Nisa’ (4:29)</span></li>
                 </ul>
 
-                <h2>F. ETIKA DAN AKHLAK</h2>
+                <h2>F. Etika dan Akhlak</h2>
                 <ul>
                     <li><span class="num">51.</span><span class="txt">Perintah Jujur – QS. Al-Ahzab (33:70)</span></li>
                     <li><span class="num">52.</span><span class="txt">Larangan Menggunjing – QS. Al-Hujurat (49:12)</span></li>
@@ -242,9 +242,9 @@
                     <li><span class="num">54.</span><span class="txt">Perintah Menjaga Lisan – QS. Al-Ahzab (33:70)</span></li>
                     <li><span class="num">55.</span><span class="txt">Keutamaan Sabar – QS. Al-Baqarah (2:153)</span></li>
                     <li><span class="num">56.</span><span class="txt">Keutamaan Syukur – QS. Ibrahim (14:7)</span></li>
-                    <li><span class="num">57.</span><span class="txt">Larangan Dengki/Hasad – QS. Al-Falaq (113:5)</span></li>
+                    <li><span class="num">57.</span><span class="txt">Larangan Dengki dan Hasad – QS. Al-Falaq (113:5)</span></li>
                     <li><span class="num">58.</span><span class="txt">Hukum Memberi Maaf – QS. An-Nur (24:22)</span></li>
-                    <li><span class="num">59.</span><span class="txt">Larangan Mencela – QS. Al-Hujurat (49:11)</span></li>
+                    <li><span class="num">59.</span><span class="txt">Larangan Mencela Orang Lain – QS. Al-Hujurat (49:11)</span></li>
                     <li><span class="num">60.</span><span class="txt">Keutamaan Tawadhu – QS. Al-Furqan (25:63)</span></li>
                 </ul>
                 <div class="page-num">Hal. 2</div>
@@ -254,16 +254,16 @@
 
         <div class="paper" id="p4" onclick="flip(this)">
             <div class="front">
-                <h2>G. KENEGARAAN</h2>
+                <h2>G. Hukum Kenegaraan dan Kepemimpinan</h2>
                 <ul>
-                    <li><span class="num">61.</span><span class="txt">Kewajiban Taat Pemimpin – QS. An-Nisa’ (4:59)</span></li>
-                    <li><span class="num">62.</span><span class="txt">Syarat Pemimpin – QS. Al-Baqarah (2:247)</span></li>
+                    <li><span class="num">61.</span><span class="txt">Kewajiban Mentaati Pemimpin Muslim – QS. An-Nisa’ (4:59)</span></li>
+                    <li><span class="num">62.</span><span class="txt">Syarat Pemimpin dalam Islam – QS. Al-Baqarah (2:247)</span></li>
                     <li><span class="num">63.</span><span class="txt">Larangan Pemimpin Dzalim – QS. Al-Ma’idah (5:8)</span></li>
-                    <li><span class="num">64.</span><span class="txt">Keutamaan Musyawarah – QS. Asy-Syura (42:38)</span></li>
-                    <li><span class="num">65.</span><span class="txt">Hukum Perang & Perdamaian – QS. Al-Anfal (8:60)</span></li>
+                    <li><span class="num">64.</span><span class="txt">Keutamaan Musyawarah dalam Pemerintahan – QS. Asy-Syura (42:38)</span></li>
+                    <li><span class="num">65.</span><span class="txt">Hukum Perang dan Perdamaian – QS. Al-Anfal (8:60)</span></li>
                 </ul>
 
-                <h2>H. SOSIAL KEMANUSIAAN</h2>
+                <h2>H. Hukum Sosial dan Kemanusiaan</h2>
                 <ul>
                     <li><span class="num">66.</span><span class="txt">Kewajiban Berbuat Adil – QS. Al-Ma’idah (5:8)</span></li>
                     <li><span class="num">67.</span><span class="txt">Kewajiban Menolong Sesama – QS. Al-Maidah (5:2)</span></li>
@@ -271,19 +271,19 @@
                     <li><span class="num">69.</span><span class="txt">Menjaga Ukhuwah Islamiyah – QS. Al-Hujurat (49:10)</span></li>
                     <li><span class="num">70.</span><span class="txt">Larangan Memutus Silaturahmi – QS. Muhammad (47:22)</span></li>
                     <li><span class="num">71.</span><span class="txt">Keutamaan Menjaga Amanah – QS. Al-Ahzab (33:72)</span></li>
-                    <li><span class="num">72.</span><span class="txt">Menolong Fakir Miskin – QS. Al-Ma’un (107:1-3)</span></li>
+                    <li><span class="num">72.</span><span class="txt">Perintah Menolong Fakir Miskin – QS. Al-Ma’un (107:1-3)</span></li>
                     <li><span class="num">73.</span><span class="txt">Hukum Menunaikan Janji – QS. Al-Isra’ (17:34)</span></li>
                     <li><span class="num">74.</span><span class="txt">Larangan Saling Bermusuhan – QS. Al-Hujurat (49:11)</span></li>
-                    <li><span class="num">75.</span><span class="txt">Berbuat Baik ke Tetangga – QS. An-Nisa’ (4:36)</span></li>
+                    <li><span class="num">75.</span><span class="txt">Kewajiban Berbuat Baik kepada Tetangga – QS. An-Nisa’ (4:36)</span></li>
                 </ul>
 
-                <h2>I. PENDIDIKAN & ILMU</h2>
+                <h2>I. Hukum Pendidikan dan Ilmu Pengetahuan</h2>
                 <ul>
                     <li><span class="num">76.</span><span class="txt">Keutamaan Menuntut Ilmu – QS. Al-Mujadilah (58:11)</span></li>
-                    <li><span class="num">77.</span><span class="txt">Mendidik Anak dengan Baik – QS. Luqman (31:13-14)</span></li>
-                    <li><span class="num">78.</span><span class="txt">Perintah Membaca/Belajar – QS. Al-‘Alaq (96:1-5)</span></li>
-                    <li><span class="num">79.</span><span class="txt">Ilmu sebagai Cahaya – QS. Az-Zumar (39:9)</span></li>
-                    <li><span class="num">80.</span><span class="txt">Keutamaan Berpikir – QS. Ali Imran (3:190-191)</span></li>
+                    <li><span class="num">77.</span><span class="txt">Kewajiban Mendidik Anak dengan Baik – QS. Luqman (31:13-14)</span></li>
+                    <li><span class="num">78.</span><span class="txt">Perintah Membaca dan Mempelajari Ilmu – QS. Al-‘Alaq (96:1-5)</span></li>
+                    <li><span class="num">79.</span><span class="txt">Ilmu sebagai Cahaya bagi Manusia – QS. Az-Zumar (39:9)</span></li>
+                    <li><span class="num">80.</span><span class="txt">Keutamaan Berpikir dan Menganalisis – QS. Ali Imran (3:190-191)</span></li>
                 </ul>
                 <div class="page-num">Hal. 3</div>
             </div>
@@ -292,40 +292,40 @@
 
         <div class="paper" id="p5" onclick="flip(this)">
             <div class="front">
-                <h2>J. LINGKUNGAN & EKOLOGI</h2>
+                <h2>J. Hukum Lingkungan dan Ekologi</h2>
                 <ul>
                     <li><span class="num">81.</span><span class="txt">Larangan Merusak Lingkungan – QS. Al-A’raf (7:56)</span></li>
                     <li><span class="num">82.</span><span class="txt">Perintah Memakmurkan Bumi – QS. Hud (11:61)</span></li>
-                    <li><span class="num">83.</span><span class="txt">Menjaga Sumber Daya Alam – QS. Al-Baqarah (2:205)</span></li>
-                    <li><span class="num">84.</span><span class="txt">Larangan Boros Air/Makanan – QS. Al-A’raf (7:31)</span></li>
-                    <li><span class="num">85.</span><span class="txt">Keutamaan Menanam Pohon – QS. Ya-Sin (36:33-35)</span></li>
+                    <li><span class="num">83.</span><span class="txt">Kewajiban Menjaga Sumber Daya Alam – QS. Al-Baqarah (2:205)</span></li>
+                    <li><span class="num">84.</span><span class="txt">Larangan Boros dalam Penggunaan Air dan Makanan – QS. Al-A’raf (7:31)</span></li>
+                    <li><span class="num">85.</span><span class="txt">Keutamaan Menanam Pohon dan Bertani – QS. Ya-Sin (36:33-35)</span></li>
                 </ul>
 
-                <h2>K. KESEHATAN</h2>
+                <h2>K. Hukum Kesehatan dan Kebersihan</h2>
                 <ul>
-                    <li><span class="num">86.</span><span class="txt">Larangan Khamr (Miras) – QS. Al-Ma’idah (5:90)</span></li>
+                    <li><span class="num">86.</span><span class="txt">Larangan Meminum Khamr (Minuman Keras) – QS. Al-Ma’idah (5:90)</span></li>
                     <li><span class="num">87.</span><span class="txt">Perintah Menjaga Kebersihan – QS. Al-Baqarah (2:222)</span></li>
-                    <li><span class="num">88.</span><span class="txt">Hukum Makanan Halal Haram – QS. Al-Ma’idah (5:3)</span></li>
+                    <li><span class="num">88.</span><span class="txt">Hukum Makanan Halal dan Haram – QS. Al-Ma’idah (5:3)</span></li>
                     <li><span class="num">89.</span><span class="txt">Larangan Makan Berlebihan – QS. Al-A’raf (7:31)</span></li>
-                    <li><span class="num">90.</span><span class="txt">Menjaga Kesehatan Diri – QS. Al-Baqarah (2:195)</span></li>
+                    <li><span class="num">90.</span><span class="txt">Perintah Menjaga Kesehatan Diri – QS. Al-Baqarah (2:195)</span></li>
                 </ul>
 
-                <h2>L. HUBUNGAN ANTARAGAMA</h2>
+                <h2>L. Hukum Hubungan Antaragama</h2>
                 <ul>
-                    <li><span class="num">91.</span><span class="txt">Larangan Memaksa Masuk Islam – QS. Al-Baqarah (2:256)</span></li>
-                    <li><span class="num">92.</span><span class="txt">Adil terhadap Non-Muslim – QS. Al-Mumtahanah (60:8)</span></li>
+                    <li><span class="num">91.</span><span class="txt">Larangan Memaksa Orang Masuk Islam – QS. Al-Baqarah (2:256)</span></li>
+                    <li><span class="num">92.</span><span class="txt">Kewajiban Berlaku Adil terhadap Non-Muslim – QS. Al-Mumtahanah (60:8)</span></li>
                     <li><span class="num">93.</span><span class="txt">Larangan Menghina Agama Lain – QS. Al-An’am (6:108)</span></li>
-                    <li><span class="num">94.</span><span class="txt">Berdialog dengan Bijaksana – QS. An-Nahl (16:125)</span></li>
-                    <li><span class="num">95.</span><span class="txt">Nikah dengan Non-Muslim – QS. Al-Ma’idah (5:5)</span></li>
+                    <li><span class="num">94.</span><span class="txt">Perintah Berdialog dengan Bijaksana – QS. An-Nahl (16:125)</span></li>
+                    <li><span class="num">95.</span><span class="txt">Hukum Hubungan Pernikahan dengan Non-Muslim – QS. Al-Ma’idah (5:5)</span></li>
                 </ul>
 
-                <h2>M. AKHIRAT & PEMBALASAN</h2>
+                <h2>M. Hukum Akhirat dan Hari Pembalasan</h2>
                 <ul>
-                    <li><span class="num">96.</span><span class="txt">Tanggung Jawab Amal – QS. Az-Zalzalah (99:7-8)</span></li>
-                    <li><span class="num">97.</span><span class="txt">Keadilan Timbangan Amal – QS. Al-Anbiya’ (21:47)</span></li>
-                    <li><span class="num">98.</span><span class="txt">Ganjaran Surga bagi Beriman – QS. Al-Baqarah (2:25)</span></li>
-                    <li><span class="num">99.</span><span class="txt">Hukuman Neraka bagi Kufur – QS. Al-Baqarah (2:39)</span></li>
-                    <li><span class="num">100.</span><span class="txt">Iman kepada Hari Kiamat – QS. Al-Hajj (22:7)</span></li>
+                    <li><span class="num">96.</span><span class="txt">Kewajiban Bertanggung Jawab atas Amal Perbuatan – QS. Az-Zalzalah (99:7-8)</span></li>
+                    <li><span class="num">97.</span><span class="txt">Keadilan Allah dalam Menimbang Amal – QS. Al-Anbiya’ (21:47)</span></li>
+                    <li><span class="num">98.</span><span class="txt">Ganjaran Surga bagi Orang yang Beriman – QS. Al-Baqarah (2:25)</span></li>
+                    <li><span class="num">99.</span><span class="txt">Hukuman Neraka bagi Orang yang Kufur – QS. Al-Baqarah (2:39)</span></li>
+                    <li><span class="num">100.</span><span class="txt">Kewajiban Beriman kepada Hari Kiamat – QS. Al-Hajj (22:7)</span></li>
                 </ul>
                 
                 <div style="text-align:center; margin-top:40px; font-weight:bold; color:#c0392b; letter-spacing:2px;">SELESAI</div>
@@ -346,4 +346,5 @@
         }
     </script>
 </body>
+
 </html>
