--- a/index.html
+++ b/index.html
@@ -302,6 +302,10 @@
     <div class="app-icon">⚖️</div>
     <div class="app-label">Syariat & Hakikat</div>
 </a>
+            <a href="35. Indikator Iman.html" class="app-card cat-tools">
+    <div class="app-icon">📶</div>
+    <div class="app-label">Iman Metric</div>
+</a>
             
 </a>
 
@@ -377,6 +381,7 @@
     </script>
 </body>
 </html>
+
 
 
 
